tests/check/illegal_inthreads.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ void illegal_inthreads(int a) {
  inthreads(a);  // can not appear in global scope

  parallel p by 3 {
    inthreads (p > 1) {
      inthreads.async(p < 1); // inner inthreads can not be async
      inthreads(p < 2);
    }

    inthreads (p > 1)
    parallel q by 4 ;  // illegal parallel in inthreads
  }
}

// CHECK: error: requires a predication expression but got 's32'.
// CHECK: error: inthreads can not be declared in global scope.
// CHECK: error: inner inthreads can not be declared as async.


__co__ void foo(int a, s32 [7, b] c) {
  parallel p by 3, q by 4 {
    inthreads (a > 0) {} // illegal
    inthreads (b > 0) {} // illegal
    inthreads (c.span(0) > 0) {} // illegal

    int d = 4;
    mutable e = 5;

    inthreads (d < 4) {}  // illegal
    inthreads (e == 5) {} // illegal

    inthreads (p > 3) {}
    inthreads (q < a) {}
    inthreads ((p == b) && (q < 4)) {}

    inthreads ((p > 0) && (d == 3)) {}  // illegal
    inthreads (p > q - 1) {}  // illegal for now
  }
}

// CHECK-COUNT-7: error: inthreads' predicate must be strictly divergent.

__co__ void bar(int a, s32 [7] b, f32 [M] c) {
  inthreads (a > 1) {} // illegal: inthreads no inside parallel-by block
  parallel p by 3 {
    inthreads(b.span(1) > 0) {} // illegal: pred is uniform
    inthreads(M < 4) {} // illegal: pred is uniform
    inthreads(p < M || M > 3) {} // illegal: not strictly divergent
    d = p - 1;
    inthreads(d > 0) {}
  }
}

// CHECK: error: inthreads can not be declared in global scope.
// CHECK-COUNT-4: error: inthreads' predicate must be strictly divergent.
// CHECK-NOT: error:
